--- a/css/styles.css
+++ b/css/styles.css
@@ -79,25 +79,26 @@ button {
 
 .container {
     max-width: 320px;
-    padding: 0 16px;
+    padding: 96px 16px;
     margin: 0 auto;
 }
 
 @media only screen and (min-width: 768px) {
     .container {
         max-width: 768px;
+        padding: 96px 16px;
     }
 }
 
-@media only screen and (min-width: 1158px) {
+@media only screen and (min-width: 1200px) {
     .container {
         max-width: 1440px;
-        padding: 0 156px;
+        padding: 120px 16px;
     }
 }
 
 .social-link-team,
- .social-link-footer {
+.social-link-footer {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -110,14 +111,27 @@ button {
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.social-link-footer:hover,
-.social-link-footer:focus {
+.social-link-footer:active {
     background-color: var(--color-success)
 }
 
-.social-link-team:hover,
-.social-link-team:focus {
+@media only screen and (min-width: 1200px) {
+    .social-link-footer:hover,
+    .social-link-footer:focus {
+        background-color: var(--color-success)
+    }
+}
+
+.social-link-team:active {
     background-color: var(--color-primary-state)
+}
+
+@media only screen and (min-width: 1200px) {
+
+    .social-link-footer:hover,
+    .social-link-footer:focus {
+        background-color: var(--color-primary-state)
+    }
 }
 
 .icon-socials-footer {
@@ -302,18 +316,20 @@ fill: #2e2f42;
             max-width: 320px;
             background-position: center;
             background-size: cover;
-            padding: 188px 0;
+
             margin: 0 auto;
 }
 
 @media only screen and (min-width: 768px) {
-  .hero {max-width: 1199.98px;
+  .hero {
+    max-width: 1199.98px;
+    padding: 0;
   }
 }
 
 @media only screen and (min-width: 1200px) {
   .hero {
-        max-width: 1200px;
+        max-width: 1440px;
   }
 }
 
@@ -361,12 +377,15 @@ fill: #2e2f42;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.hero-btn:hover {
+.hero-btn:active {
     background-color: var(--color-primary-state);
 }
 
+@media only screen and (min-width: 1200px) {
+.hero-btn:hover, 
 .hero-btn:focus {
-    background-color: var(--color-primary-state);
+        background-color: var(--color-primary-state);
+  }
 }
 
 /* #endregion */
@@ -374,39 +393,33 @@ fill: #2e2f42;
 /* #region info */
 
 .info-container {
-    margin: 0 auto;
-}
-
-/* @media only screen and (min-width: 768px) {
-    .hero-text-primary {
-    }
+    padding-top: 0;
+    padding-bottom: 96px;
 }
 
 @media only screen and (min-width: 1200px) {
-    .hero-text-primary {
-    }
-} */
-
-.info {
-    padding: 96px 0px;
-}
-
-@media only screen and (min-width: 768px) {
-    .info {
+    .info-container {
+        padding-bottom: 120px;
     }
 }
-
-@media only screen and (min-width: 1200px) {
-    .info {
-    padding: 120px 0px;
-    }
-} 
 
 .info-list {
     display: flex;
     flex-wrap: wrap;
-    gap: 24px;
     justify-content: center;
+}
+
+@media only screen and (min-width: 768px) {
+    .info-list {
+        gap: 24px;
+    }
+}
+
+@media only screen and (min-width: 1200px) {
+    .info-list {
+        gap: 24px;
+        padding-top: 120px;
+    }
 }
 
 .info-list-item {
@@ -415,33 +428,27 @@ fill: #2e2f42;
 
 @media only screen and (min-width: 1200px) {
     .info-list-item {
-        max-width: 264px;
+    max-width: 264px;
     }
 }
-
-/* width: calc((100% - 72px) / 4) */
 
 .info-icon-wrapper {
     opacity: 0;
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-bottom: 8px;
+
     background-color: var(--color-light);
     border: 1px solid var(--color-text-subtitle);
     border-radius: 4px;
-    height: 112px;
-}
-
-@media only screen and (min-width: 768px) {
-    .info-icon-wrapper {
-    
-    }
+    min-height: 96px;
 }
 
 @media only screen and (min-width: 1200px) {
     .info-icon-wrapper {
-            opacity: 1;
+        margin-bottom: 16px;
+        opacity: 1;
+        min-height: 112px;
     }
 }
 
@@ -457,9 +464,14 @@ fill: #2e2f42;
     
 }
 
+@media only screen and (min-width: 768px) {
+    .info-text-secondary {
+        text-align: left;
+    }
+}
+
 @media only screen and (min-width: 1200px) {
     .info-text-secondary {
-    text-align: left;    
     font-weight: 500;
     font-size: 20px;
     line-height: 1,2;
@@ -477,26 +489,16 @@ fill: #2e2f42;
     color: var(--color-text-primary);
 }
 
-@media only screen and (min-width: 1200px) {
-    .info-text-tertiary {
-    /* width: calc((100% - 72px) / 4) */
-    }
-}
-
-
-
 /* #endregion */
 
 /* #region team */
 
 .team {
     background-color: var(--color-light);
-        padding: 120px 0;
         display: flex;
         justify-content: center;
         align-content: center;
 }
-
 
 .team-text-primary {
     font-weight: 700;
@@ -531,13 +533,32 @@ fill: #2e2f42;
 
 .team-card-set {
     display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 72px;
+}
+
+@media only screen and (min-width: 768px) {
+    .team-card-set {
+    flex-direction: row;
+    flex-wrap: wrap;
+    flex-basis: calc((100% - 24px) / 2);
     gap: 24px;
+    }
+}
+
+@media only screen and (min-width: 1200px) {
+    .team-card-set {
+    flex-basis: calc((100% - 72px) / 4);
+    }
 }
 
 .team-card-set-item {
     background-color: var(--color-white-background);
     border-radius: 0px 0px 4px 4px; 
-    flex-basis: calc((100% - 72px) / 4);
+
+    
+
     box-shadow: 0px 1px 6px 0px rgba(46, 47, 66, 0.08),
             0px 1px 1px 0px rgba(46, 47, 66, 0.16),
             0px 2px 1px 0px rgba(46, 47, 66, 0.08);
@@ -565,10 +586,7 @@ fill: #2e2f42;
 
 /* #region portfolio */
 
-.portfolio {
-    padding-top: 120px;
-    padding-bottom: 120px;
-}
+
 
 .portfolio-text-primary {
     font-weight: 700;
@@ -586,14 +604,37 @@ fill: #2e2f42;
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
-    row-gap: 48px;
-    column-gap: 24px;
+    row-gap: 72px;
+    
+}
+
+@media only screen and (min-width: 768px) {
+    .portfolio-card-set {
+        column-gap: 24px;
+    }
+}
+
+@media only screen and (min-width: 1200px) {
+    .portfolio-card-set {
+        row-gap: 48px;
+    }
 }
 
 .portfolio-card-set-item {
-    width: calc((100% - 48px) / 3);
     max-width: 360px;
     transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+@media only screen and (min-width: 768px) {
+    .portfolio-card-set-item {
+    width: calc((100% - 24px) / 2);
+    }
+}
+
+@media only screen and (min-width: 1200px) {
+    .portfolio-card-set-item {
+    width: calc((100% - 48px) / 3);
+    }
 }
 
 .portfolio-card-set-item:hover {
@@ -627,7 +668,8 @@ overflow: hidden;
 
 
 .portfolio-card-set-item:hover .overlay,
-.portfolio-card-set-item:focus .overlay {
+.portfolio-card-set-item:focus .overlay,
+.portfolio-card-set-item:focus .active {
     transform: translateY(0%);
 }
 
