--- a/css/styles.css
+++ b/css/styles.css
@@ -46,7 +46,7 @@ ol {
 
 a {
     text-decoration: none;
-    color: currentColor;
+    color: var(--color-primary-dark);
 }
 
 img {
@@ -60,7 +60,7 @@ img {
 
 button {
     font-family: inherit;
-    color: currentColor;
+    color: activeColor;
 }
 
 .visually-hidden {
@@ -90,7 +90,7 @@ button {
     }
 }
 
-@media only screen and (min-width: 1200px) {
+@media only screen and (min-width: 1158px) {
     .container {
         max-width: 1440px;
         padding: 120px 16px;
@@ -115,7 +115,7 @@ button {
     background-color: var(--color-success)
 }
 
-@media only screen and (min-width: 1200px) {
+@media only screen and (min-width: 1158px) {
     .social-link-footer:hover,
     .social-link-footer:focus {
         background-color: var(--color-success)
@@ -126,7 +126,7 @@ button {
     background-color: var(--color-primary-state)
 }
 
-@media only screen and (min-width: 1200px) {
+@media only screen and (min-width: 1158px) {
 
     .social-link-footer:hover,
     .social-link-footer:focus {
@@ -167,26 +167,34 @@ width: 8px;
 fill: #2e2f42;
 }
 
+.active {
+    color: var(--color-primary-state);
+}
+
+.accent {
+    color: var(--color-primary-brand)
+}
+
 /* #endregion */
 
 /* #region header*/
 
 .header {
-    margin: 0 auto;
+    margin: 0;
     max-width: 1440px;
     box-shadow: 0px 1px 6px 0px rgba(46, 47, 66, 0.08),
             0px 1px 1px 0px rgba(46, 47, 66, 0.16),
             0px 2px 1px 0px rgba(46, 47, 66, 0.08);
+    margin: 0 auto;
 }
 
 .header-container {
     display: flex;
     justify-content: start;
     align-items: center;
-    max-width: 1440px;
-    padding: 0 156px;
+    min-height: 56px;
+    padding: 0 16px;
     border-bottom: 1px solid var(--color-accent);
-    
 }
 
 .header-nav {
@@ -205,10 +213,13 @@ fill: #2e2f42;
     letter-spacing: 0.03em;
     text-transform: uppercase;
     display: flex;
-    padding: 0 24px;
-    margin-right: 76px;
     color: var(--color-primary-state);
+}
 
+@media only screen and (min-width: 1158px) {
+    .header-logo {
+    margin-right: 76px;
+    }
 }
 
 .header-logo-dark {
@@ -222,10 +233,29 @@ fill: #2e2f42;
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
+    display: none;
+}
+
+@media only screen and (min-width: 768px) {
+    .header-nav-list {
     display: flex;
     align-items: center;
+    justify-content: center;
     gap: 40px;
     flex-grow: 1;
+    }
+}
+
+@media only screen and (min-width: 1158px) {
+    .header-nav-list {
+    justify-content: start;
+    }
+}
+
+@media only screen and (min-width: 768px) {
+    .menu-icon {
+        display: none;
+    }
 }
 
 .header-nav-item {
@@ -276,26 +306,41 @@ fill: #2e2f42;
 }
 
 .header-address {
-    font-style: normal;
-    
+    font-style: normal; 
 }
 
 .header-address-list {
     font-weight: 400;
-    font-size: 16px;
-    line-height: 1.5;
+    font-size: 12px;
+    line-height: 1.7;
     letter-spacing: 0.02em;
-    display: flex;
-    align-items: center;
-    justify-content: end;
-    gap: 40px;
+    display: none;
 }
+
+@media only screen and (min-width: 768px) {
+    .header-address-list {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 12px;
+    }
+}
+
+@media only screen and (min-width: 1158px) {
+    .header-address-list {
+    flex-direction: row;
+    font-size: 16px;
+    gap: 40px;
+    }
+}
+
 
 .address-html {
     display: flex;
-    padding: 24px 0;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
+        /* padding: 24px 0; */
 
 .header-address a:hover {
     color: var(--color-primary-state);
@@ -311,13 +356,11 @@ fill: #2e2f42;
 /* #region hero */
 
 .hero {
-        background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/general/people-office.jpg);
-            background-repeat: no-repeat;
-            max-width: 320px;
-            background-position: center;
-            background-size: cover;
-
-            margin: 0 auto;
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/general/people-office.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    margin: 0 auto;
 }
 
 @media only screen and (min-width: 768px) {
@@ -327,7 +370,7 @@ fill: #2e2f42;
   }
 }
 
-@media only screen and (min-width: 1200px) {
+@media only screen and (min-width: 1158px) {
   .hero {
         max-width: 1440px;
   }
@@ -353,7 +396,7 @@ fill: #2e2f42;
     }
 }
 
-@media only screen and (min-width: 1200px) {
+@media only screen and (min-width: 1158px) {
     .hero-text-primary {
         max-width: 496px;
     }
@@ -381,7 +424,7 @@ fill: #2e2f42;
     background-color: var(--color-primary-state);
 }
 
-@media only screen and (min-width: 1200px) {
+@media only screen and (min-width: 1158px) {
 .hero-btn:hover, 
 .hero-btn:focus {
         background-color: var(--color-primary-state);
@@ -397,7 +440,7 @@ fill: #2e2f42;
     padding-bottom: 96px;
 }
 
-@media only screen and (min-width: 1200px) {
+@media only screen and (min-width: 1158px) {
     .info-container {
         padding-bottom: 120px;
     }
@@ -415,7 +458,7 @@ fill: #2e2f42;
     }
 }
 
-@media only screen and (min-width: 1200px) {
+@media only screen and (min-width: 1158px) {
     .info-list {
         gap: 24px;
         padding-top: 120px;
@@ -426,7 +469,7 @@ fill: #2e2f42;
     max-width: 356px;
 }
 
-@media only screen and (min-width: 1200px) {
+@media only screen and (min-width: 1158px) {
     .info-list-item {
     max-width: 264px;
     }
@@ -444,7 +487,7 @@ fill: #2e2f42;
     min-height: 96px;
 }
 
-@media only screen and (min-width: 1200px) {
+@media only screen and (min-width: 1158px) {
     .info-icon-wrapper {
         margin-bottom: 16px;
         opacity: 1;
@@ -470,7 +513,7 @@ fill: #2e2f42;
     }
 }
 
-@media only screen and (min-width: 1200px) {
+@media only screen and (min-width: 1158px) {
     .info-text-secondary {
     font-weight: 500;
     font-size: 20px;
@@ -497,7 +540,6 @@ fill: #2e2f42;
     background-color: var(--color-light);
         display: flex;
         justify-content: center;
-        align-content: center;
 }
 
 .team-text-primary {
@@ -542,13 +584,20 @@ fill: #2e2f42;
     .team-card-set {
     flex-direction: row;
     flex-wrap: wrap;
-    flex-basis: calc((100% - 24px) / 2);
     gap: 24px;
     }
 }
 
-@media only screen and (min-width: 1200px) {
-    .team-card-set {
+@media only screen and (min-width: 768px) {
+    .team-card-set-item {
+        flex-basis: calc((100% - 24px) / 2);
+        gap: 24px;
+        max-width: 264px;
+    }
+}
+
+@media only screen and (min-width: 1158px) {
+    .team-card-set-item {
     flex-basis: calc((100% - 72px) / 4);
     }
 }
@@ -557,7 +606,7 @@ fill: #2e2f42;
     background-color: var(--color-white-background);
     border-radius: 0px 0px 4px 4px; 
 
-    
+
 
     box-shadow: 0px 1px 6px 0px rgba(46, 47, 66, 0.08),
             0px 1px 1px 0px rgba(46, 47, 66, 0.16),
@@ -614,7 +663,7 @@ fill: #2e2f42;
     }
 }
 
-@media only screen and (min-width: 1200px) {
+@media only screen and (min-width: 1158px) {
     .portfolio-card-set {
         row-gap: 48px;
     }
@@ -631,7 +680,7 @@ fill: #2e2f42;
     }
 }
 
-@media only screen and (min-width: 1200px) {
+@media only screen and (min-width: 1158px) {
     .portfolio-card-set-item {
     width: calc((100% - 48px) / 3);
     }
@@ -706,14 +755,22 @@ border-top: none;
 
 .footer {
     background-color: var(--color-primary-dark);
-    padding: 100px 0;
-
 }
+
 
 .footer-container {
     display: flex;
+    flex-direction: column;
+    justify-content: center;
     align-items: baseline;
     width: 1158px;
+}
+
+@media only screen and (min-width: 1158px) {
+    .footer-container {
+    flex-direction: row;
+    padding: 100px 0;
+    }
 }
 
 .footer-logo {
@@ -738,9 +795,17 @@ border-top: none;
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: var(--color-light);
-    max-width: 264px;
+    max-width: 288px;
+    margin-bottom: 72px;
+    text-align: left;
 }
 
+@media only screen and (min-width: 768px) {
+    .footer-text-primary {
+    margin-bottom: 0;
+    max-width: 264px;
+    }
+}
 
 .footer-social-text {
     color: var(--color-white-background);
@@ -749,14 +814,63 @@ border-top: none;
     line-height: 1.5;
     letter-spacing: 0.02em;
     margin-bottom: 16px;
+    text-align: center;
+}
+
+@media only screen and (min-width: 768px) {
+    .footer-social-text {
+    text-align: left;
+    }
 }
 
 .footer-block-1 {
+text-align: center;
+}
+
+@media only screen and (min-width: 768px) {
+    .footer-block-1 {
+    text-align: left;
+    margin-right: 24px;
+    }
+}
+
+@media only screen and (min-width: 1158px) {
+    .footer-block-1 {
     margin-right: 120px;
+    }
 }
 
 .footer-block-2 {
-    margin-right: 80px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 72px;
+}
+
+@media only screen and (min-width: 768px) {
+    .footer-block-2 {
+    align-items: start;
+    }
+}
+
+@media only screen and (min-width: 1158px) {
+    .footer-block-2 {
+        margin-right:80px;
+        margin-bottom: 0;
+    }
+}
+
+@media only screen and (min-width: 768px) {
+    .module-assist {
+    display: flex;
+    margin: 0 92px 72px;
+}
+}
+
+@media only screen and (min-width: 1158px) {
+    .module-assist {
+    margin: 0;
+    }
 }
 
 .social-wrapper-footer {
@@ -769,18 +883,34 @@ border-top: none;
     margin: 0;
 }
 
+
 .form-subscribe-text {
     margin-bottom: 16px;
     font-weight: 500;
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
-    color: #ffffff;
+    color: var(--color-white-background);
+    text-align: center;
+}
+
+@media only screen and (min-width: 768px) {
+    .form-subscribe-text {
+    text-align: left;
+    }
 }
 
 .subscribe-form {
     display: flex;
-    gap: 24px;
+    flex-direction: column;
+    align-items: center;
+    gap: 16px;
+}
+
+@media only screen and (min-width: 768px) {
+    .subscribe-form {
+    flex-direction: row;
+    }
 }
 
 .email-label {
@@ -788,33 +918,39 @@ border-top: none;
 }
 
 .email-input {
-    width: 264px;
+    width: 288px;
     height: 40px;
     padding-left: 16px;
     font-size: 12px;
     line-height: 2;
     letter-spacing: 0.04em;
-    color: #ffffff;
+    color: var(--color-white-background);
     background-color: transparent;
-    border: 1px solid #ffffff;
+    border: 1px solid var(--color-white-background);
     border-radius: 4px;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
 
+@media only screen and (min-width: 768px) {
+    .email-input {
+    width: 264px;
+    }
+}
+
 .email-input::placeholder {
-    color: #ffffff;
+    color: var(--color-white-background);
 }
 
 .subscribe-button {
     display: flex;
     align-items: center;
     justify-content: center;
-    min-width: 165px;
+    width: 165px;
     height: 40px;
     background-color: #4D5AE5;
     border: none;
     border-radius: 4px;
-    color: #ffffff;
+    color: var(--color-white-background);
     font-size: 16px;
     font-weight: 500;
     line-height: 1.5;
@@ -824,6 +960,7 @@ border-top: none;
 
 .subscribe-icon {
     margin-left: 16px;
+    fill: var(--color-white-background);
 }
 
 
@@ -867,14 +1004,26 @@ border-top: none;
     transform: translateX(-50%) translateY(-50%);
     max-width: 408px;
     width: 90%;
-    min-height: 584px;
-    padding: 72px 24px 24px 24px;
+    min-height: 623px;
+    padding: 72px 16px 16px 16px;
     border-radius: 4px;
     background: #fcfcfc;
     box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.2),
             0px 1px 3px 0px rgba(0, 0, 0, 0.12),
             0px 1px 1px 0px rgba(0, 0, 0, 0.14);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+@media only screen and (min-width: 768px) {
+    .modal {
+    padding: 72px 24px 24px 24px;
+    }
+}
+
+@media only screen and (min-width: 768px) {
+    .modal {
+    min-height: 584px;
+    }
 }
 
 
@@ -897,21 +1046,27 @@ border-top: none;
                 border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.modal-btn.mobile-btn {
+    background-color: transparent;
+}
+
 .modal-btn-icon {
     fill: var(--color-primary-dark);
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-btn:hover, 
-.modal-btn:focus {
+.modal-btn:focus,
+.modal-btn:active
+ {
     background-color: #404bbf;
     border: none;
 }
 
 .modal-btn:hover .modal-btn-icon,
-.modal-btn:focus .modal-btn-icon {
-    fill: #ffffff;
-    /* transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1); */
+.modal-btn:focus .modal-btn-icon,
+.modal-btn:focus .modal-btn-active {
+    fill: var(--color-white-background);
 }
 
 .modal-caption {
@@ -1013,8 +1168,18 @@ border-top: none;
     margin-bottom: 24px;
 }
 
-.user-privacy {
-    display: block;
+.user-privacy-line {
+    display: flex;
+}
+
+.module-terms {
+    max-width: 231px;
+}
+
+@media only screen and (min-width: 768px) {
+    .module-terms {
+        max-width: 100%;
+    }
 }
 
 .checkbox {
@@ -1045,7 +1210,6 @@ border-top: none;
 }
 
 .user-privacy-line {
-    display: block;
     font-size: 12px;
     line-height: 1.17;
     letter-spacing: 0.04em;
@@ -1058,6 +1222,7 @@ border-top: none;
     font-size: 12px;
     line-height: 1.16;
 }
+
 
 .btn-order {
     display: block;
@@ -1087,4 +1252,103 @@ border-top: none;
 }
 
     
+    /* #endregion */
+
+    /* #region mobile */
+
+.mobile-menu-btn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-width: 28px;
+    min-height: 28px;
+    padding: 0;
+    border: none;
+    background-color: transparent;
+}
+
+@media only screen and (min-width: 768px) {
+    .mobile-menu-btn {
+        display: none;
+    }
+}
+
+.mobile-menu {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100dvw;
+    height: 100dvh;
+    padding: 72px 16px 40px;
+
+    display: flex;
+    flex-direction: column;
+    transform: translateX(100%);
+
+    background-color: var(--color-white-background);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition-property: transform;
+}
+
+.mobile-menu.is-open {
+    transform: translateX(0);
+}
+
+.mobile-menu .mobile-menu-btn {
+    position: absolute;
+    top: 24px;
+    right: 24px;
+
+    color: rgb(var(--color-primary-dark));
+    border: 1px solid var(--color-accent);
+    border-radius: 50%;
+}
+
+.mobile-nav-list {
+    margin-bottom: auto;
+}
+
+.mobile-nav-list li:not(:last-child) {
+    margin-bottom: 40px;
+}
+
+.mobile-nav-list {
+    font-size: 36px;
+    font-weight: 700;
+    line-height: 40px;
+    letter-spacing: 0.72px;
+}
+
+.mobile-html {
+    display: block;
+    padding: 24px 0;
+    position: relative;
+    color: var(--color-primary-dark);
+}
+
+.mobile-html.active {
+    color: var(--color-primary-state);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+
+.mobile-menu-contacts {
+    margin-bottom: 48px;
+    font-size: 20px;
+    font-weight: 500;
+    line-height: 24px;
+    letter-spacing: 0.4px;
+}
+
+.mobile-menu-contacts li:not(:last-child) {
+    margin-bottom: 24px;
+}
+
+.social-wrapper-mobile {
+    display: flex;
+    align-items: center;
+    flex-flow: row;
+    gap: 40px;
+}
+
     /* #endregion */
