--- a/css/styles.css
+++ b/css/styles.css
@@ -97,6 +97,8 @@ button {
     }
 }
 
+/* #region socials */
+
 .social-link-team,
 .social-link-footer {
     display: flex;
@@ -134,6 +136,10 @@ button {
     }
 }
 
+/* #endregion */
+
+/* #region icons */
+
 .icon-socials-footer {
     fill: var(--color-light);
     width: 24px;
@@ -166,6 +172,8 @@ height: 8px;
 width: 8px;
 fill: #2e2f42;
 }
+
+/* #endregion */
 
 .active {
     color: var(--color-primary-state);
@@ -356,7 +364,7 @@ fill: #2e2f42;
 /* #region hero */
 
 .hero {
-    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/general/people-office.jpg);
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/general/people-office\ 1@1x.jpg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -368,6 +376,13 @@ fill: #2e2f42;
     max-width: 1199.98px;
     padding: 0;
   }
+}
+
+@media only screen and (min-width: 768px), only screen and (min-resolution: 96dpi)  {
+    .hero {
+        background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
+            url(../images/general/people-office\ 1@2x.jpg);
+    }
 }
 
 @media only screen and (min-width: 1158px) {
@@ -956,6 +971,19 @@ text-align: center;
     line-height: 1.5;
     letter-spacing: 0.04em;
     cursor: pointer;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.subscribe-button:active {
+    background-color: var(--color-primary-state);
+}
+
+@media only screen and (min-width: 1158px) {
+
+    .subscribe-button:hover,
+    .subscribe-button:focus {
+        background-color: var(--color-primary-state);
+    }
 }
 
 .subscribe-icon {
@@ -1254,7 +1282,7 @@ text-align: center;
     
     /* #endregion */
 
-    /* #region mobile */
+/* #region mobile */
 
 .mobile-menu-btn {
     display: flex;
@@ -1323,7 +1351,10 @@ text-align: center;
     display: block;
     padding: 24px 0;
     position: relative;
-    color: var(--color-primary-dark);
+}
+
+.mobile-nav-item a:active {
+    color: var(--color-primary-state);
 }
 
 .mobile-html.active {
@@ -1338,6 +1369,10 @@ text-align: center;
     font-weight: 500;
     line-height: 24px;
     letter-spacing: 0.4px;
+}
+
+.mobile-menu-contacts a:active {
+    color: var(--color-primary-state);
 }
 
 .mobile-menu-contacts li:not(:last-child) {
